exclude everything underneath build/

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,13 @@ jobs:
         with:
           theme: caffeine
           resume_filepath: ./resume/resume.json
-          output_filepath: build/index.html
+          output_filepath: ./resume/build/index.html
       - name: Authenticate to AWS
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/dentsas_portfolio_page_iam_main
           aws-region: ${{ env.AWS_REGION }}
-      - name: Copy resume to S3 bucket ${{ env.AWS_REGION }}      
+      - name: Copy resume to S3 bucket ${{ env.AWS_REGION }}
+        working-directory: resume 
         run: |
-          aws s3 cp build/index.html s3://${{ env.AWS_BUCKET_NAME }}/resume/index.html
+          aws s3 cp ./build/index.html s3://${{ env.AWS_BUCKET_NAME }}/resume/index.html
